<resources>
    <string name="app_name">ComicStrip_Application</string>
    <string name="create_a_comic_strip">Create A Comic Strip</string>
    <string name="close_application">Close Application</string>
    <string name="select_template_3">Select Template 3</string>
    <string name="select_template_1">Select Template 1</string>
    <string name="select_template_2">Select Template 2</string>
    <string name="select_template_4">Select Template 4</string>
    <string name="select_a_template_to_begin">Select a Template to Begin:</string>
    <string name="todo">TODO</string>

    <string-array name="image_options">
        <item>Choose photo from gallery</item>
        <item>Take picture with camera</item>
    </string-array>

    <string-array name="image_options2">
        <item>Edit Photo</item>
        <item>Replace picture</item>
    </string-array>

    //text font option
    <string-array name="font_options">
        <item> <b>Alex Brush Font</b></item>
        <item>Chunk Five Font</item>
        <item> Grand Hotel Font</item>
        <item>Great Vibes Font </item>
        <item> Kaushan Script Font</item>
        <item> Lato Font</item>
        <item> Oswald Font</item>
        <item> Pacifico Font</item>
        <item> Wing Song Font</item>

    </string-array>
    <string name="alert_dialog_title">Select Image Option</string>
    <string name="dialog_img_options">choose</string>
    <string name="dialog_image_options">Select Image Option</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>