<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_SelectTemplate">

    <Button
        android:id="@+id/btnSelectTemp1"
        android:layout_width="255dp"
        android:layout_height="54dp"
        android:layout_marginBottom="24dp"
        android:onClick="OpenTemplate1"
        android:text="@string/select_template_1"
        app:layout_constraintBottom_toTopOf="@+id/btnSelectTemp2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.992" />

    <Button
        android:id="@+id/btnSelectTemp2"
        android:layout_width="255dp"
        android:layout_height="54dp"
        android:layout_marginBottom="20dp"
        android:onClick="OpenTemplate2"
        android:text="@string/select_template_2"
        app:layout_constraintBottom_toTopOf="@+id/btnSelectTemp3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSelectTemp4"
        android:layout_width="255dp"
        android:layout_height="54dp"
        android:layout_marginBottom="184dp"
        android:text="@string/select_template_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSelectTemp3"
        android:layout_width="255dp"
        android:layout_height="54dp"
        android:layout_marginBottom="24dp"
        android:text="@string/select_template_3"
        app:layout_constraintBottom_toTopOf="@+id/btnSelectTemp4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="OpenTemplate3"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_a_template_to_begin"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSelectTemp1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.742" />

</androidx.constraintlayout.widget.ConstraintLayout>